--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,6 +2,9 @@
 
 - name: template logrotate.d
   template:
-    src: logrotate.d.j2
-    dest: /etc/logrotate.d/{{ item.name }}
+    src=logrotate.d.j2
+    dest=/etc/logrotate.d/{{ item.name }}
+    owner={{item.owner|default('root')}}
+    group={{item.group|default('root')}}
+    mode={{item.mode|default('0644')}}
   with_items: logrotate_d
