--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,4 +7,4 @@
     owner={{item.owner|default('root')}}
     group={{item.group|default('root')}}
     mode={{item.mode|default('0644')}}
-  with_items: logrotate_d
+  with_items: "{{logrotate_d}}"
